--- a/RD3/Views/CalibrationView.xaml
+++ b/RD3/Views/CalibrationView.xaml
@@ -17,13 +17,11 @@
     xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:vm="clr-namespace:RD3.ViewModels"
     xmlns:wpf="clr-namespace:ScottPlot.WPF;assembly=ScottPlot.WPF"
-    Width="auto"
-    Height="auto"
-    MinWidth="1600"
-    MinHeight="900"
-    d:DataContext="{d:DesignInstance Type=vm:ReactorViewModel}"
-    d:DesignHeight="900"
-    d:DesignWidth="1600"
+    Width="1200"
+    Height="900"
+    d:DataContext="{d:DesignInstance Type=vm:CalibrateViewModel}"
+    d:DesignHeight="600"
+    d:DesignWidth="1200"
     Background="{StaticResource BackGroundBrush}"
     TextElement.FontFamily="{DynamicResource AppFontFamily}"
     TextElement.FontSize="{DynamicResource TextFontSize}"
