--- a/RD3/Views/TimeSeriesView.xaml
+++ b/RD3/Views/TimeSeriesView.xaml
@@ -86,6 +86,7 @@
                     Foreground="White" />
                 <Button
                     Width="80"
+                    Margin="5,0,0,0"
                     VerticalAlignment="Bottom"
                     Background="{StaticResource PrimaryBrush}"
                     BorderBrush="{StaticResource PrimaryBrush}"
@@ -123,13 +124,21 @@
                 HorizontalGridLinesBrush="LightGray"
                 IsReadOnly="False"
                 ItemsSource="{Binding TimeSeries.TimeSeriesItemCol}"
-                RowHeaderWidth="100"
+                LoadingRow="DataGrid_LoadingRow"
+                RowHeaderWidth="0"
                 ScrollViewer.HorizontalScrollBarVisibility="Auto"
                 ScrollViewer.VerticalScrollBarVisibility="Auto"
                 SelectionMode="Single"
                 SelectionUnit="Cell"
                 VerticalGridLinesBrush="LightGray">
                 <DataGrid.Columns>
+                    <DataGridTemplateColumn Width="60" Header="序号">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding RelativeSource={RelativeSource AncestorType={x:Type DataGridRow}}, Path=Header}" />
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
                     <DataGridTextColumn
                         Width="100"
                         Binding="{Binding Time}"
@@ -143,14 +152,13 @@
                         CellStyle="{StaticResource DataGridTextCenterCellStyle}"
                         Header="溶氧(%)"
                         HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}" />
-                    <DataGridTextColumn
+                    <!--<DataGridTextColumn
                         Width="100"
                         Binding="{Binding Remark}"
                         CellStyle="{StaticResource DataGridTextCenterCellStyle}"
                         Header="备注"
-                        HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}" />
+                        HeaderStyle="{StaticResource DataGridCenterColumnHeaderStyle}" />-->
                 </DataGrid.Columns>
-
             </DataGrid>
             <GridSplitter
                 Grid.Column="1"
